--- a/device-types/FS/FHU-96FLC12MOM4.yaml
+++ b/device-types/FS/FHU-96FLC12MOM4.yaml
@@ -2,7 +2,7 @@
 manufacturer: FS
 model: FHU-96FLC12MOM4
 slug: fs-fhu-96flc12mom4
-part_number: FHU-96FLC12MOM4 (#43514)
+part_number: FHU-96FLC12MOM4
 u_height: 1.0
 is_full_depth: false
 comments: FHU 1U Breakout Cassette, 96 Fibers OM4 Multimode, Universal Polarity, 12 x MTP®-8 to 24 x LC Quad (Aqua)
